fix work component overlap

--- a/src/app/features/navbar/Navbar.css
+++ b/src/app/features/navbar/Navbar.css
@@ -1,7 +1,7 @@
 /* Navbar.css */
 .navbar {
 /*     background: linear-gradient(90deg, rgb(60, 59, 59) 0%, rgb(26, 23, 23) 100%); */
-    background-color: #333;
+    background-color: rgb(18, 19, 19);
     color: white;
     padding: 0px 0;
     border: 0px solid ;
